RANDOMWALK-17: fix chat rest controller